# haskell-builder

./: .gitignore  README.md
builder/: Dockerfile  build.sh
example/: Dockerfile  Hello.hs  LICENSE  hello.cabal  stack.yaml
