name:          hello
version:       0.0.0
cabal-version: >= 1.10
license:       MIT
license-file:  LICENSE
maintainer:    Dan Kubb
synopsis:      Hello World
description:   Hello World
category:      Example
build-type:    Simple

executable hello
    ghc-options:      -Wall
                      -fwarn-incomplete-record-updates
                      -fwarn-tabs
                      -fwarn-monomorphism-restriction
                      -fwarn-unused-do-bind
                      -fwarn-implicit-prelude
    default-language: Haskell2010
    main-is:          Hello.hs
    build-depends:    base >= 4 && < 5
